--- a/index.html
+++ b/index.html
@@ -46,25 +46,59 @@
                 procured exceptional resulfs while working with me. Delivering work within time and budget which meets
                 clients requirements in our mata.</p>
             <div class="about-info-container">
-               <div class="about-info">
-                <p class="info-title">Name:</p>
-                <p class="info-description">Mary Hardy</p>
-               </div>
-               <div class="about-info">
-                <p class="info-title">Email:</p>
-                <p class="info-description">info@gmail.com</p>
-               </div>
-               <div class="about-info">
-                <p class="info-title">Date of birth:</p>
-                <p class="info-description">11 November 1987</p>
-               </div>
-               <div class="about-info">
-                <p class="info-title">From:</p>
-                <p class="info-description">Los Angeles, USA</p>
-               </div> 
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:</p>
+                    <p class="info-description">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <p class="info-description">Los Angeles, USA</p>
+                </div>
             </div>
         </section>
-
+        <!-- What i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section>
+            <h3 class="section-title1">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
