--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6a18e1764a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,8 +31,8 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed
                     formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary-second">Download CV</button>
-                <button class="btn-primary-third">Contact</button>
+                <button class="btn-primary-second"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary-third"><i class="fa-light fa-phone"></i> Contact</button>
             </div>
             <div class="banner-img">
                 <img src="images/hardy.png" alt="">
@@ -152,7 +153,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary-second">Download CV</button>
+                <button class="btn-primary-second"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section -->
