--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     formerly he. Morning because as to society behaved moments.
                 </p>
                 <button class="btn-primary-second"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="btn-primary-third"><i class="fa-light fa-phone"></i> Contact</button>
+                <button class="btn-primary-third"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner-img">
                 <img src="images/hardy.png" alt="">
